fix(ExperienceSection): increased gap between section title and content when device width <= 750px

--- a/portfolio/styles/Experience.module.css
+++ b/portfolio/styles/Experience.module.css
@@ -1,5 +1,7 @@
 .job_experiences_section {
   max-width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .job_experiences_section h2 {
@@ -21,6 +23,13 @@
   flex-direction: column;
   gap: 3rem;
 }
+
+@media screen and (max-width: 750px) {
+  .job_experiences_section {
+    gap: 19px;
+  }
+}
+
 
 @media screen and (max-width: 500px) {
   .job_experiences_section {
